<resources>
    <string name="app_name">MyWeather</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="description_language">Description Language</string>
    <string name="portuguese_pt_br">Portuguese (PT-BR)</string>
    <string name="english_us">English (US)</string>
    <string name="c" translatable="false">ºC</string>
    <string name="f" translatable="false">ºF</string>
    <string name="k" translatable="false">ºK</string>
    <string name="save">Save</string>
    <string name="type_a_city">Type a city</string>
    <string name="atention">Atention</string>
    <string name="would_you_like_to_favorite_this_city">Would you like to favorite this city?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="would_you_like_to_remove_this_city_from_your_favorite_list">Would you like to remove this city from your favorite list?</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>